增加盘点表基本代码

--- a/TAF.Web/Views/DeliveryBill/_DeliveryBillIndex.cshtml
+++ b/TAF.Web/Views/DeliveryBill/_DeliveryBillIndex.cshtml
@@ -12,127 +12,131 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <table class="table table-striped table-hover table-bordered ">
-                            <thead>
-                                <tr role="row">
-                                    <th style="width: 200px;">
-                                        商品编码
-                                    </th>
-                                    <th style="width: 200px;">
-                                        商品名称
-                                    </th>
-                                    <th style="width: 200px;">
-                                        规格型号
-                                    </th>
-                                    <th style="width: 80px;">
-                                        单位
-                                    </th>
-                                    <th style="width: 80px;">
-                                        单价
-                                    </th>
-                                    <th style="width: 80px;">
-                                        数量
-                                    </th>
-                                    <th style="width: 80px;">
-                                        小计
-                                    </th>
-                                    <th style="width: 100px;">
-                                        仓库
-                                    </th>
-                                    <th style="width: 200px;">
-                                        备注
-                                    </th>
+                        <div class="pre-scrollable">
+                            <table class="table table-striped table-hover table-bordered "  style="width: 1500px">
+                                <thead>
+                                    <tr role="row">
+                                        <th style="width: 200px;">
+                                            商品编码
+                                        </th>
+                                        <th style="width: 200px;">
+                                            商品名称
+                                        </th>
+                                        <th style="width: 200px;">
+                                            规格型号
+                                        </th>
+                                        <th style="width: 80px;">
+                                            单位
+                                        </th>
+                                        <th style="width: 80px;">
+                                            单价
+                                        </th>
+                                        <th style="width: 80px;">
+                                            数量
+                                        </th>
+                                        <th style="width: 80px;">
+                                            小计
+                                        </th>
+                                        <th style="width: 100px;">
+                                            仓库
+                                        </th>
+                                        <th style="width: 200px;">
+                                            备注
+                                        </th>
 
-                                    <th style="width: 200px;">
-                                        操作
-                                    </th>
-                                </tr>
-                                <tr role="row">
-                                    <th>
-                                    </th>
-                                    <th>
-                                        <div v-show="!isReadOnly"> <input type="text" class="form-control" placeholder="条码" v-model="queryEntity.code" id="code" v-on:keyup.13="add" /></div>
-                                    </th>
-                                    <th>
-                                    </th>
-                                    <th>
-                                    </th>
-                                    <th>
-                                    </th>
-                                    <th>
-                                    </th>
-                                    <th>
-                                    </th>
-                                    <th>
-                                        <div v-show="!isReadOnly"><select id="searchStorageId" style="width: 100%" v-model="queryEntity.storageId">
-                                            @{
+                                        <th style="width: 200px;">
+                                            操作
+                                        </th>
+                                    </tr>
+                                    <tr role="row">
+
+                                        <th>
+                                            <div v-show="!isReadOnly"> <input type="text" class="form-control" placeholder="条码" v-model="queryEntity.code" id="code" v-on:keyup.13="add" /></div>
+                                        </th>
+                                        <th>
+                                        </th>
+                                        <th>
+                                        </th>
+                                        <th>
+                                        </th>
+                                        <th>
+                                        </th>
+                                        <th>
+                                        </th>
+                                        <th>
+                                        </th>
+                                        <th>
+                                            <div v-show="!isReadOnly">
+                                                <select id="searchStorageId" style="width: 100%" v-model="queryEntity.storageId">
+                                                    @{
                                                 for (int i = 0; i < Model.Count; i++)
                                                 {
                                                     if (i == 0)
                                                     {
-                                                        <option value="@Model[i].Id" selected="selected">@Model[i].Value</option>
+                                                                <option value="@Model[i].Id" selected="selected">@Model[i].Value</option>
                                                     }
                                                     else
                                                     {
-                                                        <option value="@Model[i].Id">@Model[i].Value</option>
+                                                                <option value="@Model[i].Id">@Model[i].Value</option>
                                                     }
                                                 }
-                                            }
-                                        </select>
-                                        </div>
+                                                    }
+                                                </select>
+                                            </div>
 
-                    </th>
-                    <th></th>
-                    <th>
+                                        </th>
+                                        <th></th>
+                                        <th>
 
-                        <div v-show="!isReadOnly">
-                            <button class="btn add" v-on:click="add()"><i class="fa fa-plus"></i> 新增</button>
-                            <button class="btn btn-primary " v-on:click="save()"><i class="fa fa-floppy-o"></i> 提交</button>
+                                            <div v-show="!isReadOnly">
+                                                <button class="btn add" v-on:click="add()"><i class="fa fa-plus"></i> 新增</button>
+                                                <button class="btn btn-primary " v-on:click="save()"><i class="fa fa-floppy-o"></i> 提交</button>
+                                            </div>
+                                            <div v-show="isReadOnly">
+                                                <button class="btn btn-primary" v-on:click="clear()"><i class="fa fa-random"></i> 清理</button>
+                                            </div>
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr v-for="i in item.items">
+                                        <td>{{i.code}}</td>
+                                        <td>{{i.name}}</td>
+                                        <td>{{i.specifications}}</td>
+                                        <td>{{i.unit}}</td>
+                                        <td>{{i.price}}</td>
+                                        <td><div v-if="!i.status">{{i.amount}}</div><div v-else><input type="number" v-model="i.amount" /></div></td>
+                                        <td>{{i.price*i.amount}}</td>
+                                        <td>{{i.storageName}}</td>
+                                        <td><div v-if="!i.status">{{i.note}}</div><div v-else><input type="text" v-model="i.note" /></div></td>
+                                        <td>
+                                            <div v-show="!isReadOnly">
+                                                <div v-if="!i.status">
+                                                    <button type="button" class="btn   edit" v-on:click="edit(i)"><i class="fa fa-edit"></i> 编辑</button>
+                                                    <button type="button" class="btn btn-danger  " v-on:click="delete(i) "><i class="fa fa-trash-o"></i> 删除</button>
+                                                </div>
+                                                <div v-else>
+                                                    <button type="button" class="btn btn-primary" v-on:click="update(i)"><i class="fa fa-floppy-o"></i> 更新</button>
+                                                    <button type="button" class="btn btn-default " v-on:click="cancel(i) "><i class="fa fa-mail-reply"></i> 取消</button>
+                                                </div>
+                                            </div>
+
+                                        </td>
+                                    </tr>
+                                </tbody>
+                                <tfoot>
+                                    <tr>
+                                        <td colspan="11" class="DTTTFooter ">
+                                            <div class="col-sm-4">
+                                                <div class="dataTables_info" id="simpledatatable_info" role="status" aria-live="polite"> {{item.items.length}} </div>
+                                            </div>
+
+                                        </td>
+                                    </tr>
+                                </tfoot>
+                            </table>
                         </div>
-                        <div v-show="isReadOnly">
-                            <button class="btn btn-primary" v-on:click="clear()"><i class="fa fa-random"></i> 清理</button>
-                        </div>
-                    </th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                        <tr v-for="i in item.items">
-                            <td>{{i.code}}</td>
-                            <td>{{i.name}}</td>
-                            <td>{{i.specifications}}</td>
-                            <td>{{i.unit}}</td>
-                            <td>{{i.price}}</td>
-                            <td><div v-if="!i.status">{{i.amount}}</div><div v-else><input type="number" v-model="i.amount" /></div></td>
-                            <td>{{i.price*i.amount}}</td>
-                            <td>{{i.storageName}}</td>
-                            <td><div v-if="!i.status">{{i.note}}</div><div v-else><input type="text" v-model="i.note" /></div></td>
-                            <td>
-                                <div v-show="!isReadOnly">
-                                    <div v-if="!i.status">
-                                        <button type="button" class="btn   edit" v-on:click="edit(i)"><i class="fa fa-edit"></i> 编辑</button>
-                                        <button type="button" class="btn btn-danger  " v-on:click="delete(i) "><i class="fa fa-trash-o"></i> 删除</button>
-                                    </div>
-                                    <div v-else>
-                                        <button type="button" class="btn btn-primary" v-on:click="update(i)"><i class="fa fa-floppy-o"></i> 更新</button>
-                                        <button type="button" class="btn btn-default " v-on:click="cancel(i) "><i class="fa fa-mail-reply"></i> 取消</button>
-                                    </div>
-                                </div>
-
-</td>
-                        </tr>
-                    </tbody>
-                    <tfoot>
-                        <tr>
-                            <td colspan="11" class="DTTTFooter ">
-                                <div class="col-sm-4">
-                                    <div class="dataTables_info" id="simpledatatable_info" role="status" aria-live="polite"> {{item.items.length}} </div>
-                                </div>
-
-                            </td>
-                        </tr>
-                    </tfoot>
-                    </table>
-                </div>
+                    </div>
                 </div>
             </div>
         </div>
