--- a/TAF.Web/Views/HisStock/_QueryStockList.cshtml
+++ b/TAF.Web/Views/HisStock/_QueryStockList.cshtml
@@ -80,7 +80,7 @@
                                     <td>{{item.date}}</td>
                                     <td>{{item.code}}</td>
                                     <td>{{item.productCode}}</td>
-                                    <td>{{item.name}}</td>
+                                    <td>{{item.productName}}</td>
                                     <td>{{item.specifications}}</td>
                                     <td>{{item.unit}}</td>
                                     <td>{{item.price}}</td>
