--- a/TAF.Web/Views/CarInfo/_CarInfoIndex.cshtml
+++ b/TAF.Web/Views/CarInfo/_CarInfoIndex.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<SCBF.BaseInfo.Dto.SysDictionaryListDto>
+﻿@model TAF.Utility.KeyValue<List<SCBF.BaseInfo.Dto.SysDictionaryListDto>, List<TAF.Utility.KeyValue<Guid, string>>>
 <div class="row">
     <div class="col-xs-12 col-md-12">
         <div class="widget">
@@ -12,7 +12,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="pre-scrollable">
-                            <table class="table table-striped table-hover table-bordered " style="width: 1500px">
+                            <table class="table table-striped table-hover table-bordered " style="width: 1600px">
                                 <thead>
                                 <tr role="row">
                                     <th style="width: 100px;">
@@ -38,6 +38,9 @@
                                     </th>
                                     <th style="width: 100px;">
                                         车辆状况
+                                    </th>
+                                    <th style="width: 100px;">
+                                        驾驶员
                                     </th>
                                     <th style="width: 100px;">
                                         行驶证号
@@ -80,15 +83,34 @@
                                         <select id="searchClzk" style="width: 100%" v-model="queryEntity.clzk">
                                             <option value="" selected="">请选择...</option>
                                             @{
-                                                for (var i = 0; i < Model.Count; i++)
+                                                for (var i = 0; i < Model.Key.Count; i++)
                                                 {
                                                     if(i == 0)
                                                     {
-                                                        <option value="@Model[i].Id" >@Model[i].Value</option>
+                                                        <option value="@Model.Key[i].Id" >@Model.Key[i].Value</option>
                                                     }
                                                     else
                                                     {
-                                                        <option value="@Model[i].Id">@Model[i].Value</option>
+                                                        <option value="@Model.Key[i].Id">@Model.Key[i].Value</option>
+                                                    }
+                                                }
+
+                                            }
+                                        </select>
+                                    </th>
+                                    <th>
+                                        <select id="searchDriver" style="width: 100%" v-model="queryEntity.driver">
+                                            <option value="" selected="">请选择...</option>
+                                            @{
+                                                for (var i = 0; i < Model.Value.Count; i++)
+                                                {
+                                                    if(i == 0)
+                                                    {
+                                                        <option value="@Model.Value[i].Key" >@Model.Value[i].Value</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option value="@Model.Value[i].Key">@Model.Value[i].Value</option>
                                                     }
                                                 }
 
@@ -115,6 +137,7 @@
                                     <td>{{item.jcgls}}</td>
                                     <td>{{item.zbsj}}</td>
                                     <td>{{item.clzk}}</td>
+                                    <td>{{item.driver}}</td>
                                     <td>{{item.xszh}}</td>
                                     <td>{{item.yxxe}}</td>
                                     <td>
@@ -122,7 +145,7 @@
                                     </td>
                                 </tr>
                                 </tbody>
-                                <tfoot is="table-foot" colspan="11"></tfoot>
+                                <tfoot is="table-foot" colspan="12"></tfoot>
                             </table>
                         </div>
                     </div>
@@ -230,15 +253,43 @@
                                     <select id="clzk" style="width: 100%" v-model="item.clzk">
                                         <option value="" >请选择...</option>
                                         @{
-                                            for (var i = 0; i < Model.Count; i++)
+                                            for (var i = 0; i < Model.Key.Count; i++)
                                             {
                                                 if(i == 0)
                                                 {
-                                                    <option value="@Model[i].Id" >@Model[i].Value</option>
+                                                    <option value="@Model.Key[i].Id" >@Model.Key[i].Value</option>
                                                 }
                                                 else
                                                 {
-                                                    <option value="@Model[i].Id">@Model[i].Value</option>
+                                                    <option value="@Model.Key[i].Id">@Model.Key[i].Value</option>
+                                                }
+                                            }
+
+                                        }
+                                    </select>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label no-padding-right">驾驶员</label>
+                            <div class="col-sm-10">
+                                <span class="input-icon icon-right">
+                                    <select id="driver" style="width: 100%" v-model="item.driver">
+                                        <option value="" >请选择...</option>
+                                        @{
+                                            for (var i = 0; i < Model.Value.Count; i++)
+                                            {
+                                                if(i == 0)
+                                                {
+                                                    <option value="@Model.Value[i].Key" >@Model.Value[i].Value</option>
+                                                }
+                                                else
+                                                {
+                                                    <option value="@Model.Value[i].Key">@Model.Value[i].Value</option>
                                                 }
                                             }
 
