--- a/TAF.Web/Views/ApplicationForBunkerA/_ApplicationForAuditAList.cshtml
+++ b/TAF.Web/Views/ApplicationForBunkerA/_ApplicationForAuditAList.cshtml
@@ -94,7 +94,7 @@
                 <th>
                     <select id="searchStatus" style="width: 100%" v-model="queryEntity.status">
                         <option value="">请选择...</option>
-                        <option value="0">等待审核</option>
+                        <option value="0" selected="">等待审核</option>
                         <option value="1">审核通过</option>
                         <option value="2">审核拒绝</option>
                     </select>
@@ -115,7 +115,7 @@
                 <td>{{item.date}}</td>
                 <td>{{item.status}}</td>
                 <td>
-                    <button type="button" class="btn   edit" v-on:click="editItem(item.id,'审核') "><i class="fa fa-edit"></i> 审核</button>
+                    <row-audit :id="item.id" title="审核" :name="item.code" :overed="item.status!=='等待审核'"></row-audit>
                 </td>
             </tr>
         </tbody>
@@ -130,7 +130,7 @@
     </div>
 </div>
 <dialog-delete></dialog-delete>
-<form-edit></form-edit>
+<form-audit></form-audit>
 <template id="applicationForAuditAAFormBody">
     <div id="form">
         <validator name="v">
@@ -138,9 +138,9 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group" >
-                            <label class="col-sm-2 control-label no-padding-right">编号<span class="red" >*</span></label>
+                            <label class="col-sm-2 control-label no-padding-right">编号</label>
                             <div class="col-sm-10">
-                                <label class="col-sm-2 control-label no-padding-right">{{item.code}}</label>
+                                <label class=" control-label no-padding-left ">{{item.code}}</label>
                             </div>
                         </div>
                     </div>
@@ -149,8 +149,8 @@
                     <div class="col-md-12">
                         <div class="form-group" >
                             <label class="col-sm-2 control-label no-padding-right">加油卡</label>
-                            <div class="col-sm-10">
-                                <label class="col-sm-2 control-label no-padding-right">{{item.oilCardCode}}</label>
+                            <div class="col-sm-10 ">
+                                <label class="control-label  no-padding-left">{{item.oilCardCode}}</label>
                             </div>
                         </div>
                     </div>
@@ -160,8 +160,7 @@
                         <div class="form-group" >
                             <label class="col-sm-2 control-label no-padding-right">申请金额</label>
                             <div class="col-sm-10">
-                                <label class="col-sm-2 control-label no-padding-right">{{item.amount}}</label>
-                                <input type="number" class="form-control" placeholder="必填" id="amount" name="amount" v-model="item.amount" v-validate:amount="{int:true}"/>
+                                <label class=" control-label no-padding-left">{{item.amount}}</label>
                             </div>
                         </div>
                     </div>
@@ -171,7 +170,7 @@
                         <div class="form-group" >
                             <label class="col-sm-2 control-label no-padding-right">卡内余额</label>
                             <div class="col-sm-10">
-                                <label class="col-sm-2 control-label no-padding-right">{{item.totalAmount}}</label>
+                                <label class=" control-label no-padding-left">{{item.totalAmount}}</label>
                             </div>
                         </div>
                     </div>
@@ -182,7 +181,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label no-padding-right">审核金额</label>
                             <div class="col-sm-10">
-                                <input type="number" class="form-control" placeholder="必填" id="auditingAmount" name="auditingAmount" v-model="item.auditingAmount" v-validate:auditingAmount="{int:true}" />
+                                <input type="number" class="form-control" placeholder="必填" id="auditingAmount" name="auditingAmount" v-model="item.auditingAmount" v-validate:auditingAmount="{required:true}" />
                             </div>
                         </div>
                     </div>
@@ -192,7 +191,7 @@
                         <div class="form-group" >
                             <label class="col-sm-2 control-label no-padding-right">驾驶员</label>
                             <div class="col-sm-10">
-                                <label class="col-sm-2 control-label no-padding-right">{{item.driverName}}</label>
+                                <label class="control-label no-padding-left">{{item.driverName}}</label>
                             </div>
                         </div>
                     </div>
@@ -202,7 +201,7 @@
                         <div class="form-group" >
                             <label class="col-sm-2 control-label no-padding-right">事由</label>
                             <div class="col-sm-10">
-                                <textarea rows="4" readonly  v-model="item.note"  class="form-control"></textarea>
+                                <textarea rows="4"   v-model="item.note"  class="form-control"></textarea>
                             </div>
                         </div>
                     </div>
