--- a/TAF.Web/Views/ApplicationForBunkerA/_ApplicationForBunkerAIndex.cshtml
+++ b/TAF.Web/Views/ApplicationForBunkerA/_ApplicationForBunkerAIndex.cshtml
@@ -142,7 +142,7 @@
                         <div class="form-group" >
                             <label class="col-sm-2 control-label no-padding-right">编号<span class="red" >*</span></label>
                             <div class="col-sm-10">
-                                <label class="col-sm-2 control-label no-padding-right">{{item.code}}</label>
+                                <label class=" control-label no-padding-left">{{item.code}}</label>
                             </div>
                         </div>
                     </div>
@@ -180,7 +180,7 @@
                         <div class="form-group" >
                             <label class="col-sm-2 control-label no-padding-right">卡内余额</label>
                             <div class="col-sm-10">
-                                <label class="col-sm-2 control-label no-padding-right">{{item.totalAmount}}</label>
+                                <label class=" control-label no-padding-left">{{item.totalAmount}}</label>
                             </div>
                         </div>
                     </div>
