--- a/TAF.Web/Views/ApplicationForBunkerA/_ApplicationForBunkerAIndex.cshtml
+++ b/TAF.Web/Views/ApplicationForBunkerA/_ApplicationForBunkerAIndex.cshtml
@@ -3,7 +3,7 @@
     <div class="col-xs-12 col-md-12">
         <div class="widget">
             <div class="widget-header bordered-bottom bordered-primary">
-                <span class="widget-caption">加油卡申请加油审批单</span>
+                <span class="widget-caption">加油卡加油申请单</span>
             </div>
             <div class="widget-body">
                 <div class="table-toolbar">
