--- a/TAF.Web/Views/Car/_CarInfoIndex.cshtml
+++ b/TAF.Web/Views/Car/_CarInfoIndex.cshtml
@@ -38,6 +38,12 @@
                                     </a>
                                 </li>
                                 <li class=" ">
+                                    <a data-toggle="tab" href="#octaneRating" aria-expanded="true" id="poctaneRating">
+                                        油料标号
+
+                                    </a>
+                                </li>
+                                <li class=" ">
                                     <a data-toggle="tab" href="#oilWearSummary" aria-expanded="true" id="poilWearSummary">
                                         百公里油耗限额(夏季)
 
@@ -179,6 +185,36 @@
                                 <div id="oilHostingUnit" class="tab-pane ">
                                     <div class="table-toolbar">
                                         <a href="javascript:void(0);" class="btn btn-primary " v-on:click="newItem('油料代管单位名称','Car_OilHostingUnit')"><i class="fa  fa-plus"></i> 新增</a>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <table class="table table-striped table-hover table-bordered ">
+                                                <thead>
+                                                <tr role="row">
+                                                    <th style="width: 200px;">
+                                                        姓名
+                                                    </th>
+                                                    <th style="width: 200px;">
+                                                        操作
+                                                    </th>
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                <tr v-for="item in list">
+                                                    <td>{{item.value}}</td>
+                                                    <td>
+                                                        <row-command :id="item.id" title="编辑" :name="item.value"></row-command>
+                                                    </td>
+                                                </tr>
+                                                </tbody>
+                                                <tfoot is="table-foot" colspan="2"></tfoot>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="octaneRating" class="tab-pane ">
+                                    <div class="table-toolbar">
+                                        <a href="javascript:void(0);" class="btn btn-primary " v-on:click="newItem('油料标号','Car_OctaneRating')"><i class="fa  fa-plus"></i> 新增</a>
                                     </div>
                                     <div class="row">
                                         <div class="col-md-6">
