--- a/TAF.Web/Views/CarInfo/_CarInfoIndex.cshtml
+++ b/TAF.Web/Views/CarInfo/_CarInfoIndex.cshtml
@@ -1,4 +1,4 @@
-﻿@model TAF.Utility.KeyValue<List<SCBF.BaseInfo.Dto.SysDictionaryListDto>, List<TAF.Utility.KeyValue<Guid, string>>>
+﻿@model TAF.Utility.KeyValue<List<SCBF.BaseInfo.Dto.SysDictionaryListDto>, List<TAF.Utility.KeyValue<Guid, string>>, List<SCBF.BaseInfo.Dto.SysDictionaryListDto>>
 <div class="row">
     <div class="col-xs-12 col-md-12">
         <div class="widget">
@@ -110,14 +110,7 @@
                                             @{
                                                 for (var i = 0; i < Model.Value.Count; i++)
                                                 {
-                                                    if(i == 0)
-                                                    {
                                                         <option value="@Model.Value[i].Key" >@Model.Value[i].Value</option>
-                                                    }
-                                                    else
-                                                    {
-                                                        <option value="@Model.Value[i].Key">@Model.Value[i].Value</option>
-                                                    }
                                                 }
 
                                             }
@@ -215,7 +208,16 @@
                             <label class="col-sm-2 control-label no-padding-right">油料标号<span class="red">*</span></label>
                             <div class="col-sm-10">
                                 <span class="input-icon icon-right">
-                                    <input type="text" class="form-control " placeholder="必填" name="ylbh" v-model="item.ylbh" v-validate:ylbh="{required:true}"/>
+                                    <select id="octaneRatingId" style="width: 100%" v-model="queryEntity.octaneRatingId"  >
+                                        <option value="" selected="">请选择...</option>
+                                        @{
+                                            for (var i = 0; i < Model.Item3.Count; i++)
+                                            {
+                                                    <option value="@Model.Item3[i].Id" >@Model.Item3[i].Value</option>
+                                            }
+
+                                        }
+                                    </select>
                                 </span>
                             </div>
                         </div>
@@ -267,14 +269,7 @@
                                         @{
                                             for (var i = 0; i < Model.Key.Count; i++)
                                             {
-                                                if(i == 0)
-                                                {
                                                     <option value="@Model.Key[i].Id" >@Model.Key[i].Value</option>
-                                                }
-                                                else
-                                                {
-                                                    <option value="@Model.Key[i].Id">@Model.Key[i].Value</option>
-                                                }
                                             }
 
                                         }
@@ -295,14 +290,7 @@
                                         @{
                                             for (var i = 0; i < Model.Value.Count; i++)
                                             {
-                                                if(i == 0)
-                                                {
                                                     <option value="@Model.Value[i].Key" >@Model.Value[i].Value</option>
-                                                }
-                                                else
-                                                {
-                                                    <option value="@Model.Value[i].Key">@Model.Value[i].Value</option>
-                                                }
                                             }
 
                                         }
