--- a/TAF.Web/Views/Driver/_DriverIndex.cshtml
+++ b/TAF.Web/Views/Driver/_DriverIndex.cshtml
@@ -24,7 +24,7 @@
                                         驾驶证有效期
                                     </th>
                                     <th style="width: 200px;">
-                                        行驶证号
+                                        驾驶证号
                                     </th>        
                                     <th style="width: 100px;">
                                         驾驶等级
@@ -104,7 +104,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group" >
-                            <label class="col-sm-2 control-label no-padding-right">行驶证号<span class="red" >*</span></label>
+                            <label class="col-sm-2 control-label no-padding-right">驾驶证号<span class="red" >*</span></label>
                             <div class="col-sm-10">
                                 <span class="input-icon icon-right">
                                     <input type="text" class="form-control " placeholder="必填" name="drivingLicense" v-model="item.drivingLicense"  v-validate:drivinglicense="{required:true}"/>
